--- a/.github/workflows/java-project-78.yml
+++ b/.github/workflows/java-project-78.yml
@@ -4,17 +4,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Download the repository code
+      - name: Check out repository code
         uses: actions/checkout@v3
-        
-      - name: set up JDK
-      - uses: actions/setup-java@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'          
+          java-version: '11'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Setup gradle
+      - name: Setup Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           gradle-version: 7.4
@@ -28,4 +27,3 @@ jobs:
         with:
           coverageCommand: make report
           coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
-        
