update добавил чтобы jacoco делал xml report

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,11 @@ version '1.0-SNAPSHOT'
 repositories {
     mavenCentral()
 }
-
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
+}
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
